--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
                 android:value="" />
         </activity>
 
+        <service android:name=".MyService" />
+
 <!--        <receiver-->
 <!--            android:name=".MyReceiver"-->
 <!--            android:exported="true">-->
